dlocate (1.13) UNRELEASED; urgency=medium

  * QA upload.
  * Add debian/gbp.conf for pristine-tar and branch-names.
  * Remove .gitignore.
  * Switch to debhelper-compat (= 13).
  * Fix permissions of /usr/share/dlocate/spcrc-*.
  * Add Vcs-Git/Vcs-Browser.

 -- Roland Rosenfeld <roland@debian.org>  Sun, 14 Apr 2024 16:23:06 +0200

dlocate (1.12) unstable; urgency=medium

  * QA upload.
  * Convert to 3.0 source format. Closes: #1007667

 -- Bastian Germann <bage@debian.org>  Thu, 24 Nov 2022 00:10:50 +0100

dlocate (1.11) unstable; urgency=medium

  * QA upload.
  * Set maintainer to Debian QA Group <packages@qa.debian.org>. (see: #1020698)

 -- Marcos Talau <talau@debian.org>  Sun, 13 Nov 2022 09:11:35 -0300

dlocate (1.10) unstable; urgency=medium

  * Edited cron.daily script to stop piuparts complaining
  * Use grep-available instead of grep-dctrl (only need to read available file, not status)
  * Closes: #1003631 Removed unnecessary call to xargs apt-cache show

 -- Craig Sanders <cas@taz.net.au>  Sat, 15 Jan 2022 15:48:48 +1100

dlocate (1.09) unstable; urgency=medium

  * forgot to update debian/compat. fixed.  Closes: #965492

 -- Craig Sanders <cas@taz.net.au>  Tue, 28 Dec 2021 02:44:11 +1100

dlocate (1.08) unstable; urgency=medium

  * Closes: #601394 For --md5check: if any files have been diverted, list them with 'dpkg-divert --list' and perform an md5sum check on the diverted files.
  * Closes: #829473 Cron.daily only runs /usr/sbin/update-dlocatedb if it exists and is executable
  * Closes: #875773 Better multi-arch support for .list, .conffiles, and .md5sums files
  * Closes: #903773 Can not reproduce
  * Closes: #912850 Removed completions, so bash-completions package can take them over
  * Closes: #867735 dlocate no longer handles its own completions file
  * Closes: #919122 Removed some extra blank lines from error msg output
  * Closes: #965492 updated debhelper compat level to >= 13